# self-healing-ci-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE1_DESIGN_REVIEW.md  PHASE1_EXECUTION_PLAN.md  PRODUCTIONIZATION_PLAN.md  README.md  RELEASE_NOTES.md  SECURITY.md  TARGET_VISION_GAP_AUDIT.md  alembic.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
app/: main.py
assets/: README.md
docker/: Caddyfile  docker-compose.yml
docs/: AUDIT.md  BLOCKER_RESOLUTION.md  PRODUCTION_READINESS.md  api_reference.md  architecture.md  project_report.md  workflows.md
examples/: sample_ci_logs.txt  sample_dashboard_output.json  sample_fix_output.json  sample_review_output.json
frontend/: .env.example  index.html  package-lock.json  package.json  streamlit_app.py  vite.config.ts
scripts/: benchmark_performance.py  generate_architecture_svg.py  generate_readme_arch_svg.py  generate_readme_workflow_svg.py
tests/: conftest.py  e2e_real_github.py  test_analysis_router.py  test_analysis_workflow.py  test_analytics_engine.py  test_auth.py  test_benchmark_service.py  test_branch_manager.py  test_build_validator.py  test_charts.py  test_chunking.py  test_circuit_breaker.py  test_commit_manager.py  test_dashboard_router.py  test_debug_prompt.py  test_e2e_verification.py  test_error_classifier.py  test_fix_agent.py  test_fix_pipeline.py  test_fix_prompt.py  test_fix_router.py  test_fix_workflow.py  test_hardening.py  test_health_router.py  test_pr_prompt.py  (+32 more)
(+193 files in other folders)
